finish drawing cards logic